egonlang-core/res/examples/valid/let_decl_untyped_assign_from_identifier.eg
let a = 123;
let b = a;
let c: number = a + b;