egonlang-core/res/examples/invalid/let_decl_typed_with_nonidentifier.eg
let a: 123 = 456;

// out: SyntaxError: unexpected "123"; expected: ["identifier"]